# FIAMN

FIAMN/: main.py  pyproject.toml
FIAMN/TIC_filtering/: script_02_TIC_filtering.py
FIAMN/adaptive_intensity_plateau_denoising/: adaptive_intensity_plateau_denoising.py
FIAMN/family_Network_Cosine/: script_03_cosine_similarity_calc.py
FIAMN/skeleton_fragment_filter/: script_05_skeleton_fragment_filter.py
FIBMN/precursor_formula_filter/: script_04_precursor_formula_filter.py
FIBMN/skeleton_similarity_network/: script_06_skeleton_sim.py
FIBMN/spectral_denoising/: script_01_spectral_denoising.py
