[project]
name = "fibmn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matchms>=0.21.1",
    "numpy>=2.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.13.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
